移除了 app/listen, app/load/${category} 钩子
移除了 ctx.app (请使用 ctx.root)
移除了 ctx.options (请使用 ctx.root.config)
serializer: 移除 showDisplayName 参数