@@ -2,3 +2,4 @@
 移除了 ctx.app (请使用 ctx.root)
 移除了 ctx.options (请使用 ctx.root.config)
 serializer: 移除 showDisplayName 参数
+移除了 loader.addScript, loader.addon 函数
